Completed major refactoring; filled in most of the missing parts; ready for review

--- a/detritus.tex
+++ b/detritus.tex
@@ -28,6 +28,26 @@
 % --------------------------------------------------
 \subsection{Techniques/metrics for evaluating the likely success and impact of proposed / nascent academic software projects}
 
+
+% --------------------------------------------------
+\subsection{Baseline practices and product quality as well as their expected changes}
+
+
+\begin{itemize}
+
+\item Find out what ``normally'' exists  and changes to be able to observe the effect of intended and unintended interventions
+\item ``Avoid the base rate fallacy''
+\item Ties in with question 1 (which first needs answering before we can go into this properly)
+\item This requires frames of reference, such as:
+
+    \begin{itemize}
+    \item suitable quality models for research software
+    \item level of training of developers
+    \end{itemize}
+
+\item Comparison with broader scopes such as open-source software
+\item Ethnographic and qualitative studies
+\end{itemize}
 % ==========================================================
 \section*{Brainstorming detritus}
 
