--- a/eas.bib
+++ b/eas.bib
@@ -16,7 +16,7 @@
 	url = {http://www.ontosoft.org/gpf/what-is-a-gpf},
 	urldate = {2016-06-24},
 	journal = {http://www.ontosoft.org/gpf/what-is-a-gpf},
-	author = {{Onto Soft}},
+	author = {{OntoSoft}},
 	year = {2016},
 	file = {What is a Geoscience Paper of the Future | The Geoscience Papers of the Future Initiative:/Users/khuff/Library/Application Support/Zotero/Profiles/lvoutoj9.default/zotero/storage/35QZ2GP4/what-is-a-gpf.html:text/html}
 }
@@ -95,9 +95,9 @@ Shared under CC-BY.},
 @article{arfon_m._smith_software_2016,
 	series = {Software {Citation} {Workshop} {Report}},
 	title = {Software {Citation} {Principles}},
-	volume = {Draft},
+	volume = {Accepted},
 	url = {https://www.force11.org/software-citation-principles},
-	journal = {FORCE11},
+	journal = {PeerJ Computer Science},
 	author = {{Arfon M. Smith} and {Kyle E. Niemeyer} and {Daniel S. Katz} and {FORCE11 Software Citation Working Group}},
 	year = {2016},
 	file = {software-citation-principles.pdf:/Users/khuff/Library/Application Support/Zotero/Profiles/lvoutoj9.default/zotero/storage/N3B4GH48/software-citation-principles.pdf:application/pdf}
