updates huff affiliation. also, prefer kathryn on things that are published...

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -42,7 +42,7 @@
 \author[12]{Robert Haines}%\affil[12]{University of Manchester, UK}
 \author[13]{Robert Hirschfeld}\affil[13]{~Hasso-Plattner-Institut -- Potsdam, Germany}
 \author[14]{James Howison}\affil[14,24]{~University of Texas at Austin, US}
-\author[15]{Katy Huff}\affil[15]{University of California Berkeley, US}
+\author[15]{Kathryn Huff}\affil[15]{University of Illinois at Urbana-Champaign, US}
 \author[16]{Caroline Jay}%\affil[16]{University of Manchester, UK}
 \author[17]{Daniel S. Katz}\affil[17,22]{~University of Illinois Urbana-Champaign, US}
 \author[18]{Claude Kirchner}\affil[18]{INRIA -- Le Chesnay, France}
@@ -567,7 +567,7 @@ Specific questions in the area of ecosystem analysis and metadata are:
 \participant Robert Haines\\ University of Manchester
 \participant Robert Hirschfeld\\ Hasso-Plattner-Institut -- Potsdam
 \participant James Howison\\ University of Texas -- Austin
-\participant Katy Huff\\ University of California -- Berkeley
+\participant Kathryn Huff\\ University of Illinois at Urbana-Champaigh
 \participant Caroline Jay\\ University of Manchester
 \participant Dan Katz\\ University of Illinois at Urbana Champaign
 \participant Claude Kirchner\\ INRIA -- Le Chesnay
