Added pointer to Nature article on reproducibility requirements for JASA.

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -589,6 +589,7 @@ We thank Tobias Rawald (GFZ Potsdam) for his contributions to the phrasing of th
 % ==========================================================
 %\bibliography{dagman-sample} % use bibtex or thebibliography-environment (as below)
 
+
 \bibliography{eas}
 
 
@@ -607,8 +608,8 @@ Other topics addressed by such manifestos include emphasis on access to source c
 
 Emphasis on grass-roots support and institutional change toward visibility of the research contributions of software and software engineers are also addressed by many of these manifestors. A domain-specific manifesto, ``Astronomical Software Wants To Be Free: A Manifesto,'' is a key example of a call to arms for that community to value the software underlying their science \cite{weiner_astronomical_2009}. Broader calls for this community action are included in the  UK RSE objectives and the Science Code Manifesto.
 
-Many are more focused on the practice of reproducible software development for research. These inclue the Open Science Peer Review Oath, the Reproducibility PI Manifesto, the GeoScience Paper of the Future Initiative, and the FAIR principles. 
-
+Many are more focused on the practice of reproducible software development for research. These include the Open Science Peer Review Oath, the Reproducibility PI Manifesto, the GeoScience Paper of the Future Initiative, and the FAIR principles. 
+The Journal of the American Statistical Association (JASA) will now insist on the availability of code and data during the review of manuscripts \cite{Baker2016}.
 
 % ----------
 \manifesto{Science Code Manifesto}~\cite{nick_barnes_science_2013}\footnote{\url{http://sciencecodemanifesto.org/}}
