--- a/eas.bib
+++ b/eas.bib
@@ -144,3 +144,11 @@ Shared under CC-BY.},
 	file = {PubMed Central Full Text PDF:/Users/khuff/Library/Application Support/Zotero/Profiles/lvoutoj9.default/zotero/storage/JWBH5P2M/Wilkinson et al. - 2016 - The FAIR Guiding Principles for scientific data ma.pdf:application/pdf}
 }
 
+@article{Baker2016,
+  title = {Why scientists must share their research code},
+  url = {http://www.nature.com/news/why-scientists-must-share-their-research-code-1.20504},
+  doi = {10.1038/nature.2016.20504},
+  author = {Monya Baker},
+  journal = {Nature},
+  year = {2016}
+}
