added SHARE bib

--- a/eas.bib
+++ b/eas.bib
@@ -1,6 +1,19 @@
 % References. First version from:
 % https://github.com/katyhuff/2016-06-19-dagstuhl/blob/gh-pages/dagstuhl-manifesto.bib
 
+@inproceedings{DBLP:journals/procedia/GorpM11,
+  author    = {Pieter Van Gorp and
+               Steffen Mazanek},
+  title     = {{SHARE:} a web portal for creating and sharing executable research
+               papers},
+  booktitle = {Proceedings of the International Conference on Computational Science,
+               {ICCS} 2011},
+               2011},
+  pages     = {589--597},
+  year      = {2011},
+  month = Jun
+}
+
 @inproceedings{senyard2004have,
   title={How to have a successful free software project},
   author={Senyard, Anthony and Michlmayr, Martin},
