added collage editing environment bib

--- a/eas.bib
+++ b/eas.bib
@@ -1,6 +1,19 @@
 % References. First version from:
 % https://github.com/katyhuff/2016-06-19-dagstuhl/blob/gh-pages/dagstuhl-manifesto.bib
 
+
+@article{NOWAKOWSKI2011608,
+title = "The Collage Authoring Environment",
+journal = "Procedia Computer Science",
+volume = "4",
+number = "",
+pages = "608 - 617",
+year = "2011",
+note = "",
+issn = "1877-0509",
+author = "Piotr Nowakowski and Eryk Ciepiela and Daniel Harezlak and Joanna Kocot and Marek Kasztelnik and Tomasz Bartynski and Jan Meizner and Grzegorz Dyk and Maciej Malawski",
+}
+
 @inproceedings{DBLP:journals/procedia/GorpM11,
   author    = {Pieter Van Gorp and
                Steffen Mazanek},
