added exec papers

--- a/eas.bib
+++ b/eas.bib
@@ -14,6 +14,14 @@ issn = "1877-0509",
 author = "Piotr Nowakowski and Eryk Ciepiela and Daniel Harezlak and Joanna Kocot and Marek Kasztelnik and Tomasz Bartynski and Jan Meizner and Grzegorz Dyk and Maciej Malawski",
 }
 
+@misc{execpapers,
+  author = {Peter Sloot},
+  title = {The Executable Paper Grand Challenge},
+  year = {2011},
+  publisher = {Elsevier},
+  note = {http://www.executablepapers.com/about-challenge.html},
+}s 
+
 @inproceedings{DBLP:journals/procedia/GorpM11,
   author    = {Pieter Van Gorp and
                Steffen Mazanek},
