added cites to the three new bib entries

--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -481,8 +481,8 @@ The following specific questions need to be addressed:
 \end{itemize}
 
 \todo{Refer to related work:
-Executable papers, Peter Sloot (Elsevier's executable paper competition),
-SHARE [2.0] Pieter van Gorp}
+Executable papers, Peter Sloot (Elsevier's executable paper competition)~\cite{execpapers} The Collage Authoring Environment~\cite{NOWAKOWSKI2011608},
+SHARE~\cite{DBLP:journals/procedia/GorpM11} [2.0] Pieter van Gorp}
 
 
 % --------------------------------------------------
