--- a/eas.bib
+++ b/eas.bib
@@ -1,6 +1,22 @@
 % References. First version from:
 % https://github.com/katyhuff/2016-06-19-dagstuhl/blob/gh-pages/dagstuhl-manifesto.bib
 
+@article{DBLP:journals/scp/MensBK14,
+  author    = {Kim Mens and
+               M. G. J. van den Brand and
+               Holger M. Kienle},
+  title     = {Guest editors' introduction to the 4th issue of Experimental Software
+               and Toolkits {(EST-4)}},
+  journal   = {Sci. Comput. Program.},
+  volume    = {79},
+  pages     = {1--5},
+  year      = {2014},
+  url       = {http://dx.doi.org/10.1016/j.scico.2012.12.005},
+  doi       = {10.1016/j.scico.2012.12.005},
+  timestamp = {Tue, 29 Oct 2013 10:53:14 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/scp/MensBK14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
 
 @article{NOWAKOWSKI2011608,
 title = "The Collage Authoring Environment",
