--- a/dagstuhl-eas-manifesto.tex
+++ b/dagstuhl-eas-manifesto.tex
@@ -484,6 +484,9 @@ The following specific questions need to be addressed:
 Executable papers, Peter Sloot (Elsevier's executable paper competition)~\cite{execpapers} The Collage Authoring Environment~\cite{NOWAKOWSKI2011608},
 SHARE~\cite{DBLP:journals/procedia/GorpM11} [2.0] Pieter van Gorp}
 
+What about this:
+\texttt{http://www.journals.elsevier.com/softwarex}
+
 
 % --------------------------------------------------
 \subsection{Software engineering tools improving productivity by tailoring to intent and skill}
