--- a/edit-macros.tex
+++ b/edit-macros.tex
@@ -103,6 +103,8 @@
 \newcommand\ck[1]{\nbc{Claude}{#1}{cyan}}
    \definecolor{darkgreen}{rgb}{0,0.6,0}
 \newcommand\katznote[1]{\nbc{Dan}{#1}{darkgreen}} % add more author macros here
+   \definecolor{bluegreen}{rgb}{0,0.5,0.5}
+\newcommand\kt[1]{\nbc{Kt}{#1}{bluegreen}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{darkgray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{gray}}
 %\newcommand\XXX[1]{\nbc{XXX}{#1}{olive}}
